<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vendemia.fragments.fragmnt_Ventas">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            tools:ignore="RtlHardcoded">

            <Button
                android:text="@string/btn_venta"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_nventa"
                tools:ignore="HardcodedText"
                android:onClick="n_venta" />

            <TextView
                android:text="@string/msg_vactivas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_VActivas"
                tools:ignore="HardcodedText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_horizontal|center"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:text="@string/msg_folioV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_folioV" />

                <TextView
                    android:text="@string/msg_calveC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_CClientes"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:text="@string/msg_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_Nombre"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:text="@string/msg_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_Total"
                    android:layout_weight="1"
                    android:layout_marginStart="60dp" />

                <TextView
                    android:text="@string/msg_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_fecha"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:text="@string/msg_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_status"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf">

            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
