<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vendemia.fragments.fragmnt_Rventas">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="172dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:weightSum="1"
                tools:ignore="RtlHardcoded,UselessParent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.21"
                        tools:ignore="UselessParent">

                        <TextView
                            android:text="@string/foli_venta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_folioVent"
                            android:layout_weight="0.98"
                            android:gravity="end"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:textColor="@android:color/holo_green_dark"
                            tools:ignore="InefficientWeight,NestedWeights" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_numberV"
                            android:gravity="end"
                            android:text="@string/number_folio"
                            android:textColor="@android:color/holo_green_dark" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_weight="0.18"
                    tools:ignore="InefficientWeight">

                    <TextView
                        android:text="@string/tv_cliente"
                        android:id="@+id/tv_clientes"
                        android:layout_weight="0.13"
                        android:background="@drawable/bordes"
                        android:layout_height="39dp"
                        android:gravity="center"
                        android:textColor="@android:color/background_light"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="40dp"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/et_cliente"
                        android:layout_weight="0.14"
                        android:gravity="left"
                        android:hint="Buscar Cliente..."
                        tools:ignore="HardcodedText,RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_rfc"
                        android:layout_weight="1"
                        android:layout_marginStart="25dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <TextView
                        android:text="@string/tv_articulo"
                        android:layout_width="39dp"
                        android:layout_weight="0.11"
                        android:background="@drawable/bordes"
                        android:layout_height="39dp"
                        tools:ignore="NestedWeights"
                        android:gravity="center"
                        android:id="@+id/tv_article"
                        android:textColor="@android:color/background_light"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="20dp" />

                    <EditText
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/ed_articles"
                        android:layout_weight="0.05"
                        android:hint="Bucar Artiuclo...."
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:text="@string/btn_agregar"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_agregar"
                        android:background="@android:drawable/ic_input_add" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                tools:ignore="UselessParent">

                <TextView
                    android:text="@string/dscrip_articulo"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:id="@+id/tv_dsArticle"
                    android:layout_weight="2.30"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/tv_modelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_modelo"
                    android:layout_weight="1.56"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/tv_cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_cantidad"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/tv_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_precio"
                    android:layout_weight="0.61"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/tv_importe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_improte"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
