<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <TableLayout
            android:layout_width="352dp"
            android:layout_height="201dp"
            android:gravity="center"
            android:layout_gravity="center"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/TasF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textColor="#15c006" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/Tfinas"
                    android:hint="12.."
                    tools:ignore="HardcodedText"
                    android:maxLength="5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/porcetaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textColor="#15c006" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/engacheconfis"
                    android:hint="15.."
                    tools:ignore="HardcodedText"
                    android:maxLength="3" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/pmazismos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textColor="#15c006" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/plazoconfigs"
                    android:hint="12"
                    tools:ignore="HardcodedText"
                    android:maxLength="3" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">


        <Button
            android:text="@string/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guardar_configs"
            android:background="#15c006"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>