<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_articulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vendimia.sanz.lavendimia.vendemia.fragments.fragmnt_Artiuclos"
    tools:showIn="@layout/fragmnt_artiuclos">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/ArtRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Ar_restrdos"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:background="@android:color/darker_gray">

            <TextView
                android:text="@string/CAarticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CArticulo"
                android:layout_weight="0.34"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:text="@string/DescripcionArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAlertas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            tools:ignore="ObsoleteLayoutParam" />
    </LinearLayout>
</RelativeLayout>
