<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_clientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:showIn="@layout/activity_clientes">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/clientesRdos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Cliente_regis"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:background="@android:color/darker_gray">

            <TextView
                android:text="@string/Cclientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CCliente"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="@string/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Cnombre"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1" />

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAlertas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>
</RelativeLayout>
